change header hello-block

--- a/index.html
+++ b/index.html
@@ -11,33 +11,38 @@
     <div class="wrapper">
         <div class="hello-block">
             <header class="header">
-                <div class="header__logo">
-                        <img src="/img/hello_section/logo.svg" alt="Мистер Бургер" class="logo__img">
-                </div>
-                <nav class="header__navigation">
-                    <ul class="nav__list">
-                        <li class="nav__item"><a href="" class="nav__link">о нас</a></li>
-                        <li class="nav__item"><a href="" class="nav__link">бургеры</a></li>
-                        <li class="nav__item"><a href="" class="nav__link">команда</a></li>
-                        <li class="nav__item"><a href="" class="nav__link">меню</a></li>
-                        <li class="nav__item"><a href="" class="nav__link">отзывы</a></li>
-                        <li class="nav__item"><a href="" class="nav__link">контакты</a></li>
-                    </ul>
-                </nav>
-                <div class="header__order">
-                    <div class="order__btn">заказать</div>
+                <div class="container clearfix">
+                    <div class="header__logo">
+                            <img src="/img/hello_section/logo.svg" alt="Мистер Бургер" class="logo__img">
+                    </div>
+                    <nav class="header__navigation">
+                        <ul class="nav__list">
+                            <li class="nav__item"><a href="" class="nav__link">о нас</a></li>
+                            <li class="nav__item"><a href="" class="nav__link">бургеры</a></li>
+                            <li class="nav__item"><a href="" class="nav__link">команда</a></li>
+                            <li class="nav__item"><a href="" class="nav__link">меню</a></li>
+                            <li class="nav__item"><a href="" class="nav__link">отзывы</a></li>
+                            <li class="nav__item"><a href="" class="nav__link">контакты</a></li>
+                        </ul>
+                    </nav>
+                    <div class="header__order">
+                        <div class="order__btn">заказать</div>
+                    </div>
                 </div>
             </header>
             <div class="hello-block__content">
-                <div class="hello-block__pic-wrap">
-                    <img src="./img/hello_section/steam.png" alt="Бургер" class="hello-block__picture">
-                </div>
-                <div class="hello-block__slogan">
-                    <div class="slogan__text1">
-                        Мы делаем
+                <div class="container">
+                    <div class="hello-block__pic-wrap">
+                        <img src="./img/hello_section/drops.svg" alt="" class="hello-block__drops">
+                        <img src="./img/hello_section/steam.png" alt="Бургер" class="hello-block__picture">
                     </div>
-                    <div class="slogan__text2">
-                        натуральные бургеры
+                    <div class="hello-block__slogan">
+                        <div class="slogan__text1">
+                            Мы делаем
+                        </div>
+                        <div class="slogan__text2">
+                            натуральные бургеры
+                        </div>
                     </div>
                 </div>
             </div>
