--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <header class="header">
                 <div class="container clearfix">
                     <div class="header__logo">
-                            <img src="/img/hello_section/logo.svg" alt="Мистер Бургер" class="logo__img">
+                            <img src="./img/hello_section/logo.svg" alt="Мистер Бургер" class="logo__img">
                     </div>
                     <nav class="header__navigation">
                         <ul class="nav__list">
