style header hello-block

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="hello-block">
+        <section class="hello-block">
             <header class="header">
                 <div class="container clearfix">
                     <div class="header__logo">
@@ -31,7 +31,7 @@
                 </div>
             </header>
             <div class="hello-block__content">
-                <div class="container">
+                <div class="container clearfix">
                     <div class="hello-block__pic-wrap">
                         <img src="./img/hello_section/drops.svg" alt="" class="hello-block__drops">
                         <img src="./img/hello_section/steam.png" alt="Бургер" class="hello-block__picture">
@@ -46,8 +46,20 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     </div>
+    <aside class="pagination">
+        <ul class="pagination__list">
+            <li class="pagination__item"></li>
+            <li class="pagination__item"></li>
+            <li class="pagination__item"></li>
+            <li class="pagination__item"></li>
+            <li class="pagination__item"></li>
+            <li class="pagination__item"></li>
+            <li class="pagination__item"></li>
+            <li class="pagination__item"></li>
+        </ul>
+    </aside>
     <footer class="footer">
 
     </footer>
