--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                     </div>
                 </div>
             </div>
+            <div class="hello-block__forward">
+                <img src="./img/hello_section/arrow-scroll.svg" alt="" class="forward__pic">
+            </div>
         </section>
     </div>
     <aside class="pagination">
