add best__section feedback__section

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                         <img src="./img/hello_section/steam.png" alt="Бургер" class="hello-block__picture">
                     </div>
                     <div class="hello-block__slogan">
-                        <div class="slogan__text1">
+                        <h2 class="slogan__title">
                             Мы делаем
-                        </div>
-                        <div class="slogan__text2">
+                        </h2>
+                        <div class="slogan__text">
                             натуральные бургеры
                         </div>
                     </div>
@@ -49,19 +49,123 @@
                 <img src="./img/hello_section/arrow-scroll.svg" alt="" class="forward__pic">
             </div>
         </section>
+        <section class="best">
+            <h2 class="best__title">
+                Мы лучшие
+            </h2>
+            <div class="best__content">
+                <ul class="best__list">
+                    <li class="best__item">
+                        <img src="img/best_section/meat.png" alt="Мясо" class="best__img">
+                        <h3 class="best__subtitle">100% свежее мясо</h3>
+                        <div class="best__text">
+                            Драма представляет собой 
+                            деструктивный цикл. Анапест представляет собой 
+                            анапест. Ямб неравномерен.
+                        </div>
+                    </li>
+                    <li class="best__item">
+                        <img src="img/best_section/hand.png" alt="Рука" class="best__img">
+                        <h3 class="best__subtitle">Ручная  сборка</h3>
+                        <div class="best__text">
+                                Драма представляет собой 
+                                деструктивный цикл. Анапест представляет собой 
+                                анапест. Первое полустишие притягивает 
+                                сюжетный реформаторский пафос.
+                        </div>
+                    </li>
+                    <li class="best__item">
+                        <img src="img/best_section/natural.png" alt="Салат" class="best__img">
+                        <h3 class="best__subtitle">Натуральные ингредиенты</h3>
+                        <div class="best__text">
+                                Драма представляет собой деструктивный цикл. 
+                                Анапест представляет собой анапест.
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="feedback">
+            <ul class="feedback__list">
+                <li class="feedback__item">
+                    <img src="" alt="" class="feedback__avatar">
+                    <div class="feedback__content">
+                        <h3 class="feedback__subtitle"></h3>
+                        <div class="feedback__text"></div>
+                        <div class="feedback__btn"></div>
+                    </div>
+                </li>
+                <li class="feedback__item">
+                    <img src="" alt="" class="feedback__avatar">
+                    <div class="feedback__content">
+                        <h3 class="feedback__subtitle"></h3>
+                        <div class="feedback__text"></div>
+                        <div class="feedback__btn"></div>
+                    </div>
+                </li>
+                <li class="feedback__item">
+                    <img src="" alt="" class="feedback__avatar">
+                    <div class="feedback__content">
+                        <h3 class="feedback__subtitle"></h3>
+                        <div class="feedback__text"></div>
+                        <div class="feedback__btn"></div>
+                    </div>
+                </li>
+                <li class="feedback__item">
+                    <img src="" alt="" class="feedback__avatar">
+                    <div class="feedback__content">
+                        <h3 class="feedback__subtitle"></h3>
+                        <div class="feedback__text"></div>
+                        <div class="feedback__btn"></div>
+                    </div>
+                </li>
+                <li class="feedback__item">
+                    <img src="" alt="" class="feedback__avatar">
+                    <div class="feedback__content">
+                        <h3 class="feedback__subtitle"></h3>
+                        <div class="feedback__text"></div>
+                        <div class="feedback__btn"></div>
+                    </div>
+                </li>
+                <li class="feedback__item">
+                    <img src="" alt="" class="feedback__avatar">
+                    <div class="feedback__content">
+                        <h3 class="feedback__subtitle"></h3>
+                        <div class="feedback__text"></div>
+                        <div class="feedback__btn"></div>
+                    </div>
+                </li>
+                <li class="feedback__item">
+                    <img src="" alt="" class="feedback__avatar">
+                    <div class="feedback__content">
+                        <h3 class="feedback__subtitle"></h3>
+                        <div class="feedback__text"></div>
+                        <div class="feedback__btn"></div>
+                    </div>
+                </li>
+                <li class="feedback__item">
+                    <img src="" alt="" class="feedback__avatar">
+                    <div class="feedback__content">
+                        <h3 class="feedback__subtitle"></h3>
+                        <div class="feedback__text"></div>
+                        <div class="feedback__btn"></div>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <aside class="pagination">
+            <ul class="pagination__list">
+                <li class="pagination__item"></li>
+                <li class="pagination__item"></li>
+                <li class="pagination__item"></li>
+                <li class="pagination__item"></li>
+                <li class="pagination__item"></li>
+                <li class="pagination__item"></li>
+                <li class="pagination__item"></li>
+                <li class="pagination__item"></li>
+            </ul>
+        </aside>
     </div>
-    <aside class="pagination">
-        <ul class="pagination__list">
-            <li class="pagination__item"></li>
-            <li class="pagination__item"></li>
-            <li class="pagination__item"></li>
-            <li class="pagination__item"></li>
-            <li class="pagination__item"></li>
-            <li class="pagination__item"></li>
-            <li class="pagination__item"></li>
-            <li class="pagination__item"></li>
-        </ul>
-    </aside>
     <footer class="footer">
 
     </footer>
