--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <section class="hello-block">
+        <section class="section section--hello-block">
             <header class="header">
                 <div class="container clearfix">
                     <div class="header__logo">
@@ -36,7 +36,7 @@
                         <img src="./img/hello_section/steam.png" alt="Бургер" class="hello-block__picture">
                     </div>
                     <div class="hello-block__slogan">
-                        <h2 class="slogan__title">
+                        <h2 class="title title--slogan">
                             Мы делаем
                         </h2>
                         <div class="slogan__text">
@@ -49,40 +49,48 @@
                 <img src="./img/hello_section/arrow-scroll.svg" alt="" class="forward__pic">
             </div>
         </section>
-        <section class="best">
-            <h2 class="best__title">
-                Мы лучшие
-            </h2>
-            <div class="best__content">
-                <ul class="best__list">
-                    <li class="best__item">
-                        <img src="img/best_section/meat.png" alt="Мясо" class="best__img">
-                        <h3 class="best__subtitle">100% свежее мясо</h3>
-                        <div class="best__text">
-                            Драма представляет собой 
-                            деструктивный цикл. Анапест представляет собой 
-                            анапест. Ямб неравномерен.
-                        </div>
-                    </li>
-                    <li class="best__item">
-                        <img src="img/best_section/hand.png" alt="Рука" class="best__img">
-                        <h3 class="best__subtitle">Ручная  сборка</h3>
-                        <div class="best__text">
+        <section class="section section--best">
+            <div class="container">
+                <h2 class="title title--best">
+                    Мы лучшие
+                </h2>
+                <div class="best__content">
+                    <ul class="best__list">
+                        <li class="best__item">
+                            <div class="best__pic-wrap">
+                                <img src="img/best_section/meat.png" alt="Мясо" class="best__img">
+                            </div>
+                            <h3 class="best__subtitle">100% свежее мясо</h3>
+                            <div class="best__text">
                                 Драма представляет собой 
                                 деструктивный цикл. Анапест представляет собой 
-                                анапест. Первое полустишие притягивает 
-                                сюжетный реформаторский пафос.
-                        </div>
-                    </li>
-                    <li class="best__item">
-                        <img src="img/best_section/natural.png" alt="Салат" class="best__img">
-                        <h3 class="best__subtitle">Натуральные ингредиенты</h3>
-                        <div class="best__text">
-                                Драма представляет собой деструктивный цикл. 
-                                Анапест представляет собой анапест.
-                        </div>
-                    </li>
-                </ul>
+                                анапест. Ямб неравномерен.
+                            </div>
+                        </li>
+                        <li class="best__item">
+                            <div class="best__pic-wrap">
+                                <img src="img/best_section/hand.png" alt="Мясо" class="best__img">
+                            </div>
+                            <h3 class="best__subtitle">Ручная  сборка</h3>
+                            <div class="best__text">
+                                    Драма представляет собой 
+                                    деструктивный цикл. Анапест представляет собой 
+                                    анапест. Первое полустишие притягивает 
+                                    сюжетный реформаторский пафос.
+                            </div>
+                        </li>
+                        <li class="best__item">
+                            <div class="best__pic-wrap">
+                                <img src="img/best_section/natural.png" alt="Мясо" class="best__img">
+                            </div>                            
+                            <h3 class="best__subtitle">Натуральные ингредиенты</h3>
+                            <div class="best__text">
+                                    Драма представляет собой деструктивный цикл. 
+                                    Анапест представляет собой анапест.
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section class="feedback">
