--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <title>Мистер Бургер</title>
 </head>
 <body>
     <div class="wrapper">
         <section class="section section--hello-block">
             <header class="header">
-                <div class="container clearfix">
+                <div class="container">
                     <div class="header__logo">
                             <img src="./img/hello_section/logo.svg" alt="Мистер Бургер" class="logo__img">
                     </div>
@@ -31,7 +32,7 @@
                 </div>
             </header>
             <div class="hello-block__content">
-                <div class="container clearfix">
+                <div class="container">
                     <div class="hello-block__pic-wrap">
                         <img src="./img/hello_section/steam.png" alt="Бургер" class="hello-block__picture">
                     </div>
@@ -93,70 +94,126 @@
                 </div>
             </div>
         </section>
-        <section class="feedback">
+        <section class="section section--feedback">
             <ul class="feedback__list">
                 <li class="feedback__item">
-                    <img src="" alt="" class="feedback__avatar">
+                    <img src="/img/feedback_section/photo-1438763298591-75a0d42b7265.png" alt="" class="feedback__avatar feedback__avatar--pic1">
                     <div class="feedback__content">
-                        <h3 class="feedback__subtitle"></h3>
-                        <div class="feedback__text"></div>
-                        <div class="feedback__btn"></div>
+                        <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                        <div class="feedback__text">
+                            Мысли все о них и о них, 
+                            о них и о них. Нельзя устоять, 
+                            невозможно забыть... Никогда не думал, 
+                            что булочки могут быть такими мягкими, 
+                            котлетка такой сочной, а сыр таким 
+                            расплавленным.
+                        </div>
+                        <div class="feedback__btn">подробнее</div>
                     </div>
                 </li>
                 <li class="feedback__item">
-                    <img src="" alt="" class="feedback__avatar">
+                    <img src="/img/feedback_section/photo-1440606797942-6cc04c045447.png" alt="" class="feedback__avatar feedback__avatar--pic2">
                     <div class="feedback__content">
-                        <h3 class="feedback__subtitle"></h3>
-                        <div class="feedback__text"></div>
-                        <div class="feedback__btn"></div>
+                        <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                        <div class="feedback__text">
+                            Мысли все о них и о них, 
+                            о них и о них. Нельзя устоять, 
+                            невозможно забыть... Никогда не думал, 
+                            что булочки могут быть такими мягкими, 
+                            котлетка такой сочной, а сыр таким 
+                            расплавленным.
+                        </div>
+                        <div class="feedback__btn">подробнее</div>
                     </div>
                 </li>
                 <li class="feedback__item">
-                    <img src="" alt="" class="feedback__avatar">
+                    <img src="/img/feedback_section/photo-1445404590072-16ef9c18bd83.png" alt="" class="feedback__avatar feedback__avatar--pic3">
                     <div class="feedback__content">
-                        <h3 class="feedback__subtitle"></h3>
-                        <div class="feedback__text"></div>
-                        <div class="feedback__btn"></div>
+                        <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                        <div class="feedback__text">
+                            Мысли все о них и о них, 
+                            о них и о них. Нельзя устоять, 
+                            невозможно забыть... Никогда не думал, 
+                            что булочки могут быть такими мягкими, 
+                            котлетка такой сочной, а сыр таким 
+                            расплавленным.
+                        </div>
+                        <div class="feedback__btn">подробнее</div>
                     </div>
                 </li>
                 <li class="feedback__item">
-                    <img src="" alt="" class="feedback__avatar">
+                    <img src="/img/feedback_section/photo-1457706924510-773f3c796de3.png" alt="" class="feedback__avatar feedback__avatar--pic4">
                     <div class="feedback__content">
-                        <h3 class="feedback__subtitle"></h3>
-                        <div class="feedback__text"></div>
-                        <div class="feedback__btn"></div>
+                        <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                        <div class="feedback__text">
+                            Мысли все о них и о них, 
+                            о них и о них. Нельзя устоять, 
+                            невозможно забыть... Никогда не думал, 
+                            что булочки могут быть такими мягкими, 
+                            котлетка такой сочной, а сыр таким 
+                            расплавленным.
+                        </div>
+                        <div class="feedback__btn">подробнее</div>
                     </div>
                 </li>
                 <li class="feedback__item">
-                    <img src="" alt="" class="feedback__avatar">
+                    <img src="/img/feedback_section/photo-1458696765561-12142eaead13.png" alt="" class="feedback__avatar feedback__avatar--pic5">
                     <div class="feedback__content">
-                        <h3 class="feedback__subtitle"></h3>
-                        <div class="feedback__text"></div>
-                        <div class="feedback__btn"></div>
+                        <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                        <div class="feedback__text">
+                            Мысли все о них и о них, 
+                            о них и о них. Нельзя устоять, 
+                            невозможно забыть... Никогда не думал, 
+                            что булочки могут быть такими мягкими, 
+                            котлетка такой сочной, а сыр таким 
+                            расплавленным.
+                        </div>
+                        <div class="feedback__btn">подробнее</div>
                     </div>
                 </li>
                 <li class="feedback__item">
-                    <img src="" alt="" class="feedback__avatar">
+                    <img src="/img/feedback_section/photo-1458890715264-db84f7c6ef13.png" alt="" class="feedback__avatar feedback__avatar--long feedback__avatar--pic6">
                     <div class="feedback__content">
-                        <h3 class="feedback__subtitle"></h3>
-                        <div class="feedback__text"></div>
-                        <div class="feedback__btn"></div>
+                        <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                        <div class="feedback__text">
+                            Мысли все о них и о них, 
+                            о них и о них. Нельзя устоять, 
+                            невозможно забыть... Никогда не думал, 
+                            что булочки могут быть такими мягкими, 
+                            котлетка такой сочной, а сыр таким 
+                            расплавленным.
+                        </div>
+                        <div class="feedback__btn">подробнее</div>
                     </div>
                 </li>
                 <li class="feedback__item">
-                    <img src="" alt="" class="feedback__avatar">
+                    <img src="/img/feedback_section/photo-1461332682233-b818af4c3a6e.png" alt="" class="feedback__avatar feedback__avatar--pic7">
                     <div class="feedback__content">
-                        <h3 class="feedback__subtitle"></h3>
-                        <div class="feedback__text"></div>
-                        <div class="feedback__btn"></div>
+                        <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                        <div class="feedback__text">
+                            Мысли все о них и о них, 
+                            о них и о них. Нельзя устоять, 
+                            невозможно забыть... Никогда не думал, 
+                            что булочки могут быть такими мягкими, 
+                            котлетка такой сочной, а сыр таким 
+                            расплавленным.
+                        </div>
+                        <div class="feedback__btn">подробнее</div>
                     </div>
                 </li>
                 <li class="feedback__item">
-                    <img src="" alt="" class="feedback__avatar">
+                    <img src="/img/feedback_section/photo-1468546818829-25bb337b6646.png" alt="" class="feedback__avatar feedback__avatar--long">
                     <div class="feedback__content">
-                        <h3 class="feedback__subtitle"></h3>
-                        <div class="feedback__text"></div>
-                        <div class="feedback__btn"></div>
+                        <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                        <div class="feedback__text">
+                            Мысли все о них и о них, 
+                            о них и о них. Нельзя устоять, 
+                            невозможно забыть... Никогда не думал, 
+                            что булочки могут быть такими мягкими, 
+                            котлетка такой сочной, а сыр таким 
+                            расплавленным.
+                        </div>
+                        <div class="feedback__btn">подробнее</div>
                     </div>
                 </li>
             </ul>
