add accordeon active class

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<h2 class="title title--team">команда</h2>
 				<div class="v-accordeon">
 					<ul class="v-accordeon__list">
-						<li class="v-accordeon__item">
+						<li class="v-accordeon__item v-accordeon__item--active">
 							<h3 class="v-accordeon__name">Дэниэл Редклиф</h3>
 							<div class="v-accordeon__content">
 								<div class="pic-wrap">
@@ -109,12 +109,20 @@
 									<h4 class="content__title">Оператор</h4>
 									<div class="content__text">С радостью поможет подобрать
 										идеальный бургер и оформить заказ.
+										С радостью поможет подобрать
+										идеальный бургер и оформить заказ.
+										С радостью поможет подобрать
+										идеальный бургер и оформить заказ.
+										С радостью поможет подобрать
+										идеальный бургер и оформить заказ.
+										С радостью поможет подобрать
+										идеальный бургер и оформить заказ.
 									</div>
 								</div>
 							</div>
 						</li>
 						<li class="v-accordeon__item">
-							<h3 class="v-accordeon__name">Ричард Джеймс</h3>
+							<h3 class="v-accordeon__name ">Ричард Джеймс</h3>
 							<div class="v-accordeon__content">
 								<div class="pic-wrap">
 									<img src="img/team_section/crewman.jpg" alt="Аватар" class="content__img">
@@ -128,7 +136,7 @@
 							</div>
 						</li>
 						<li class="v-accordeon__item">
-							<h3 class="v-accordeon__name">Джейк Финн</h3>
+							<h3 class="v-accordeon__name ">Джейк Финн</h3>
 							<div class="v-accordeon__content">
 								<div class="pic-wrap">
 									<img src="img/team_section/crewman.jpg" alt="Аватар" class="content__img">
