--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<h2 class="title title--team">команда</h2>
 				<div class="v-accordeon">
 					<ul class="v-accordeon__list">
-						<li class="v-accordeon__item v-accordeon__item--active">
+						<li class="v-accordeon__item">
 							<h3 class="v-accordeon__name">Дэниэл Редклиф</h3>
 							<div class="v-accordeon__content">
 								<div class="pic-wrap">
@@ -113,7 +113,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="v-accordeon__item">
+						<li class="v-accordeon__item v-accordeon__item--active">
 							<h3 class="v-accordeon__name ">Ричард Джеймс</h3>
 							<div class="v-accordeon__content">
 								<div class="pic-wrap">
@@ -157,6 +157,75 @@
 						</li>
 					</ul>
 				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section section--menu">
+		<h2 class="title title--menu">меню</h2>
+		<div class="menu__right-col">
+			<div class="h-accordeon">
+				<ul class="h-accordeon__list">
+					<li class="h-accordeon__item">
+						<h3 class="h-accordeon__title">Для мясоедов</h3>
+						<div class="h-accordeon__content h-accordeon__content--active">
+							<div class="content__text">
+								Речевой акт редуцирует диалектический характер. 
+								Развивая эту тему, заимствование редуцирует 
+								конструктивный механизм сочленений. Лирический 
+								субъект начинает диссонансный анжамбеман. Наш 
+								современник стал особенно чутко относиться к слову, 
+								однако механизм сочленений неустойчив. Модальность 
+								высказывания, как справедливо считает И.Гальперин, 
+								пространственно выбирает метр.
+								Речевой акт редуцирует диалектический характер. Развивая 
+								эту тему, заимствование редуцирует конструктивный 
+								механизм сочленений. Лирический субъект начинает 
+								диссонансный анжамбеман. Наш современник стал 
+								особенно чутко относиться к слову.
+							</div>
+						</div>
+					</li>
+					<li class="h-accordeon__item">
+						<h3 class="h-accordeon__title">Вегетарианское</h3>
+						<div class="h-accordeon__content">
+							<div class="content__text">
+								Речевой акт редуцирует диалектический характер. 
+								Развивая эту тему, заимствование редуцирует 
+								конструктивный механизм сочленений. Лирический 
+								субъект начинает диссонансный анжамбеман. Наш 
+								современник стал особенно чутко относиться к слову, 
+								однако механизм сочленений неустойчив. Модальность 
+								высказывания, как справедливо считает И.Гальперин, 
+								пространственно выбирает метр.
+								Речевой акт редуцирует диалектический характер. Развивая 
+								эту тему, заимствование редуцирует конструктивный 
+								механизм сочленений. Лирический субъект начинает 
+								диссонансный анжамбеман. Наш современник стал 
+								особенно чутко относиться к слову.
+							</div>
+						</div>
+					</li>
+					<li class="h-accordeon__item">
+						<h3 class="h-accordeon__title">диетическое</h3>
+						<div class="h-accordeon__content">
+							<div class="content__text">
+								Речевой акт редуцирует диалектический характер. 
+								Развивая эту тему, заимствование редуцирует 
+								конструктивный механизм сочленений. Лирический 
+								субъект начинает диссонансный анжамбеман. Наш 
+								современник стал особенно чутко относиться к слову, 
+								однако механизм сочленений неустойчив. Модальность 
+								высказывания, как справедливо считает И.Гальперин, 
+								пространственно выбирает метр.
+								Речевой акт редуцирует диалектический характер. Развивая 
+								эту тему, заимствование редуцирует конструктивный 
+								механизм сочленений. Лирический субъект начинает 
+								диссонансный анжамбеман. Наш современник стал 
+								особенно чутко относиться к слову.
+							</div>
+						</div>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</section>
