add menu title bg

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 			<div class="h-accordeon">
 				<ul class="h-accordeon__list">
 					<li class="h-accordeon__item">
-						<h3 class="h-accordeon__title">Для мясоедов</h3>
+						<h3 class="h-accordeon__title h-accordeon__title--meat">Для мясоедов</h3>
 						<div class="h-accordeon__content h-accordeon__content--active">
 							<div class="content__text">
 								Речевой акт редуцирует диалектический характер. 
@@ -186,7 +186,7 @@
 						</div>
 					</li>
 					<li class="h-accordeon__item">
-						<h3 class="h-accordeon__title">Вегетарианское</h3>
+						<h3 class="h-accordeon__title h-accordeon__title--vegetarian">Вегетарианское</h3>
 						<div class="h-accordeon__content">
 							<div class="content__text">
 								Речевой акт редуцирует диалектический характер. 
@@ -206,7 +206,7 @@
 						</div>
 					</li>
 					<li class="h-accordeon__item">
-						<h3 class="h-accordeon__title">диетическое</h3>
+						<h3 class="h-accordeon__title h-accordeon__title--diet">диетическое</h3>
 						<div class="h-accordeon__content">
 							<div class="content__text">
 								Речевой акт редуцирует диалектический характер. 
