--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <section class="section section--hello-block">
+        <section class="section hello-block">
             <header class="header">
                 <div class="container">
                     <div class="header__logo">
@@ -26,7 +26,7 @@
                             <li class="nav__item"><a href="#" class="nav__link">контакты</a></li>
                         </ul>
                     </nav>
-                    <div class="header__order">
+                    <div class="order">
                         <a href="#" class="order__btn">заказать</a>
                     </div>
                 </div>
@@ -46,11 +46,11 @@
                     </div>
                 </div>
             </div>
-            <div class="hello-block__forward">
-                <img src="./img/hello_section/arrow-scroll.svg" alt="" class="forward__pic">
+            <div class="forward-arrow">
+                <img src="./img/hello_section/arrow-scroll.svg" alt="" class="forward-arrow__pic">
             </div>
         </section>
-        <section class="section section--best">
+        <section class="section best">
             <div class="container">
                 <h2 class="title title--best">
                     Мы лучшие
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </section>
-        <section class="section section--feedback">
+        <section class="section feedback">
             <ul class="feedback__list">
                 <li class="feedback__item">
                     <img src="img/feedback_section/photo-1438763298591-75a0d42b7265.png" alt="" class="feedback__avatar feedback__avatar--pic1">
