--- a/index.html
+++ b/index.html
@@ -56,39 +56,39 @@
                     Мы лучшие
                 </h2>
                 <div class="best__content">
-                    <ul class="best__list">
-                        <li class="best__item">
-                            <div class="best__pic-wrap">
-                                <img src="img/best_section/meat.png" alt="Мясо" class="best__img">
+                    <ul>
+                        <li>
+                            <div>
+                                <img src="img/best_section/meat.png" alt="Мясо">
                             </div>
-                            <h3 class="best__subtitle">100% свежее мясо</h3>
-                            <div class="best__text">
+                            <h3>100% свежее мясо</h3>
+                            <p>
                                 Драма представляет собой 
                                 деструктивный цикл. Анапест представляет собой 
                                 анапест. Ямб неравномерен.
-                            </div>
+                            </p>
                         </li>
-                        <li class="best__item">
-                            <div class="best__pic-wrap">
-                                <img src="img/best_section/hand.png" alt="Мясо" class="best__img">
+                        <li>
+                            <div>
+                                <img src="img/best_section/hand.png" alt="Рука">
                             </div>
-                            <h3 class="best__subtitle">Ручная  сборка</h3>
-                            <div class="best__text">
+                            <h3>Ручная  сборка</h3>
+                            <p>
                                     Драма представляет собой 
                                     деструктивный цикл. Анапест представляет собой 
                                     анапест. Первое полустишие притягивает 
                                     сюжетный реформаторский пафос.
-                            </div>
+                            </p>
                         </li>
-                        <li class="best__item">
-                            <div class="best__pic-wrap">
-                                <img src="img/best_section/natural.png" alt="Мясо" class="best__img">
+                        <li>
+                            <div>
+                                <img src="img/best_section/natural.png" alt="Салат">
                             </div>                            
-                            <h3 class="best__subtitle">Натуральные ингредиенты</h3>
-                            <div class="best__text">
+                            <h3>Натуральные ингредиенты</h3>
+                            <p>
                                     Драма представляет собой деструктивный цикл. 
                                     Анапест представляет собой анапест.
-                            </div>
+                            </p>
                         </li>
                     </ul>
                 </div>
