add links to pagination

--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
         </section>
         <aside class="pagination">
             <ul class="pagination__list">
-                <li class="pagination__item"></li>
-                <li class="pagination__item"></li>
-                <li class="pagination__item"></li>
-                <li class="pagination__item"></li>
-                <li class="pagination__item"></li>
-                <li class="pagination__item"></li>
-                <li class="pagination__item"></li>
-                <li class="pagination__item"></li>
+                <li class="pagination__item"><a href="#" class="pagination__link"></a></li>
+                <li class="pagination__item"><a href="#" class="pagination__link"></a></li>
+                <li class="pagination__item"><a href="#" class="pagination__link"></a></li>
+                <li class="pagination__item"><a href="#" class="pagination__link"></a></li>
+                <li class="pagination__item"><a href="#" class="pagination__link"></a></li>
+                <li class="pagination__item"><a href="#" class="pagination__link"></a></li>
+                <li class="pagination__item"><a href="#" class="pagination__link"></a></li>
+                <li class="pagination__item"><a href="#" class="pagination__link"></a></li>
             </ul>
         </aside>
     </div>
