add and style order and map

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 							<li class="nav__item"><a href="#" class="nav__link">отзывы</a></li>
 							<li class="nav__item"><a href="#" class="nav__link">контакты</a></li>
 						</ul>
-						<div class="header__order">
-							<a href="#" class="order__btn">заказать</a>
-						</div>
+                        <a href="#" class="order-btn">заказать</a>
 					</nav>
 				</header>
 				<div class="hello-block__container">
@@ -232,8 +230,7 @@
 		</section>
 		<section class="section section--feedback">
 			<ul class="feedback__list">
-				<li class="feedback__item">
-					<img src="img/feedback_section/photo-1438763298591-75a0d42b7265.png" alt="" class="feedback__avatar feedback__avatar--pic1">
+				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1438763298591-75a0d42b7265.png)">
 					<div class="feedback__content">
 						<h3 class="feedback__subtitle">Константин Спилберг</h3>
 						<div class="feedback__text">
@@ -244,11 +241,10 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<div class="feedback__btn">подробнее</div>
+						<a class="feedback__btn">подробнее</a>
 					</div>
 				</li>
-				<li class="feedback__item">
-					<img src="img/feedback_section/photo-1440606797942-6cc04c045447.png" alt="" class="feedback__avatar feedback__avatar--pic2">
+				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1440606797942-6cc04c045447.png)">
 					<div class="feedback__content">
 						<h3 class="feedback__subtitle">Константин Спилберг</h3>
 						<div class="feedback__text">
@@ -259,11 +255,10 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<div class="feedback__btn">подробнее</div>
+						<a class="feedback__btn">подробнее</a>
 					</div>
 				</li>
-				<li class="feedback__item">
-					<img src="img/feedback_section/photo-1445404590072-16ef9c18bd83.png" alt="" class="feedback__avatar feedback__avatar--pic3">
+				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1445404590072-16ef9c18bd83.png)">
 					<div class="feedback__content">
 						<h3 class="feedback__subtitle">Константин Спилберг</h3>
 						<div class="feedback__text">
@@ -274,11 +269,10 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<div class="feedback__btn">подробнее</div>
+						<a class="feedback__btn">подробнее</a>
 					</div>
 				</li>
-				<li class="feedback__item">
-					<img src="img/feedback_section/photo-1457706924510-773f3c796de3.png" alt="" class="feedback__avatar feedback__avatar--pic4">
+				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1457706924510-773f3c796de3.png)">
 					<div class="feedback__content">
 						<h3 class="feedback__subtitle">Константин Спилберг</h3>
 						<div class="feedback__text">
@@ -289,11 +283,10 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<div class="feedback__btn">подробнее</div>
+						<a class="feedback__btn">подробнее</a>
 					</div>
 				</li>
-				<li class="feedback__item">
-					<img src="img/feedback_section/photo-1458696765561-12142eaead13.png" alt="" class="feedback__avatar feedback__avatar--pic5">
+				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1458696765561-12142eaead13.png)">
 					<div class="feedback__content">
 						<h3 class="feedback__subtitle">Константин Спилберг</h3>
 						<div class="feedback__text">
@@ -304,11 +297,10 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<div class="feedback__btn">подробнее</div>
+						<a class="feedback__btn">подробнее</a>
 					</div>
 				</li>
-				<li class="feedback__item">
-					<img src="img/feedback_section/photo-1458890715264-db84f7c6ef13.png" alt="" class="feedback__avatar feedback__avatar--long feedback__avatar--pic6">
+				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1458890715264-db84f7c6ef13.png)">
 					<div class="feedback__content">
 						<h3 class="feedback__subtitle">Константин Спилберг</h3>
 						<div class="feedback__text">
@@ -319,11 +311,10 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<div class="feedback__btn">подробнее</div>
+						<a class="feedback__btn">подробнее</a>
 					</div>
 				</li>
-				<li class="feedback__item">
-					<img src="img/feedback_section/photo-1461332682233-b818af4c3a6e.png" alt="" class="feedback__avatar feedback__avatar--pic7">
+				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1461332682233-b818af4c3a6e.png)">
 					<div class="feedback__content">
 						<h3 class="feedback__subtitle">Константин Спилберг</h3>
 						<div class="feedback__text">
@@ -334,11 +325,10 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<div class="feedback__btn">подробнее</div>
+						<a class="feedback__btn">подробнее</a>
 					</div>
 				</li>
-				<li class="feedback__item">
-					<img src="img/feedback_section/photo-1468546818829-25bb337b6646.png" alt="" class="feedback__avatar feedback__avatar--long">
+				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1468546818829-25bb337b6646.png)">
 					<div class="feedback__content">
 						<h3 class="feedback__subtitle">Константин Спилберг</h3>
 						<div class="feedback__text">
@@ -349,11 +339,115 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<div class="feedback__btn">подробнее</div>
+						<a class="feedback__btn">подробнее</a>
 					</div>
 				</li>
 			</ul>
-		</section>
+    </section>
+    <section class="section order">
+      <div class="container">
+        <h2 class="title title--order">закажите доставку</h2>
+        <div class="form">
+            <form action="get" class="form_elem">
+              	<div class="form__content">
+					<div class="form__col">
+						<div class="form__row">
+							<label class="form__block">
+								<div class="form__title">Имя</div>
+								<input type="text" class="form__input">
+							</label>
+							<label class="form__block">
+								<div class="form__title">Телефон</div>
+								<input type="text" class="form__input">
+							</label>
+						</div>
+						<div class="form__row">
+							<label class="form__block">
+								<div class="form__title">Улица</div>
+								<input type="text" class="form__input">
+							</label>
+						</div>
+						<div class="form__row">
+							<label class="form__block">
+								<div class="form__title">Дом</div>
+								<input type="text" class="form__input">
+							</label>
+							<label class="form__block">
+								<div class="form__title">Корпус</div>
+								<input type="text" class="form__input">
+							</label>
+								<label class="form__block">
+								<div class="form__title">Квартира</div>
+								<input type="text" class="form__input">
+							</label>
+							<label class="form__block">
+								<div class="form__title">Этаж</div>
+								<input type="text" class="form__input">
+							</label>
+						</div>
+					</div>
+					<div class="form__col">
+						<div class="form__row">
+							<label class="form__block">
+								<div class="form__title">Этаж</div>
+								<textarea class="form__input form__input--textarea"></textarea>
+							</label>
+						</div>
+						<div class="form__row">
+							<label class="form__radio-lbl">
+								<input type="radio" checked name="pay-type" class="form__radio">
+								<div class="form__custom-radio"></div>
+								<div class="form__title">Потребуется сдача</div>
+							</label>
+							<label class="form__radio-lbl">
+								<input type="radio" name="pay-type" class="form__radio">
+								<div class="form__custom-radio"></div>
+								<div class="form__title">Оплата по карте</div>
+							</label>
+						</div>
+						<div class="form__row">
+							<label class="form__radio-lbl">
+								<input type="checkbox" class="form__check">
+								<div class="form__custom-check"></div>
+								<div class="form__title">Не перезванивать</div>
+							</label>
+						</div>
+						<div class="form__row">
+							<button type="submit" class="button order-btn">Заказать</button>
+							<button type="reset" class="button reset-btn">Очистить</button>
+						</div>
+					</div>
+				</div>
+			</form>
+        </div>
+      </div>
+    </section>
+    <section class="section map">
+    	<footer class="footer">
+			<div class="container">
+				<div class="footer__right-col">
+					<diiv class="contacts">
+						<span class="contacts__address">
+							Санкт-Петербург, ул.Бабушкина, д.12/1, 15
+						</span>
+						<a href="tel:+78123771377" class="contacts__phone">
+							+7 (812) 377-13-77
+						</a>
+					</diiv>
+				</div>
+				<div class="footer__left-col">
+					<div class="socials">
+						<ul class="socials__list">
+							<li class="socials__item"></li>
+							<li class="socials__item"></li>
+							<li class="socials__item"></li>
+							<li class="socials__item"></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+    	</footer>
+    </section>
 		<aside class="pagination">
 			<ul class="pagination__list">
 				<li class="pagination__item"></li>
@@ -366,9 +460,6 @@
 				<li class="pagination__item"></li>
 			</ul>
 		</aside>
-		<footer class="footer">
-	
-		</footer>
   </div>
 </body>
 </html>
