--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 							<li class="nav__item"><a href="#" class="nav__link">отзывы</a></li>
 							<li class="nav__item"><a href="#" class="nav__link">контакты</a></li>
 						</ul>
-                        <a href="#" class="order-btn">заказать</a>
+						<a href="#" class="order-btn">заказать</a>
+						<a class="hamburger-menu-link" href="">
+							<div class="hamburger-menu-link__bars"></div>
+						</a>
 					</nav>
 				</header>
 				<div class="hello-block__container">
@@ -178,8 +181,8 @@
 					<a href="#" class="h-accordeon__trigger h-accordeon__trigger--meat">
 						<h3 class="h-accordeon__title">Для мясоедов</h3>
 					</a>
-					<div class="h-accordeon__content h-accordeon__content--active">
-						<div class="content__text">
+					<div class="h-accordeon__content">
+						<div class="h-accordeon__content-text">
 							Речевой акт редуцирует диалектический характер. 
 							Развивая эту тему, заимствование редуцирует 
 							конструктивный механизм сочленений. Лирический 
@@ -197,11 +200,11 @@
 					</div>
 				</li>
 				<li class="h-accordeon__item">
-					<a href="#" class="h-accordeon__trigger h-accordeon__trigger--vegetarian"></a>
+					<a href="#" class="h-accordeon__trigger h-accordeon__trigger--vegetarian">
 						<h3 class="h-accordeon__title ">Вегетарианское</h3>
 					</a>
 					<div class="h-accordeon__content">
-						<div class="content__text">
+						<div class="h-accordeon__content-text">
 							Речевой акт редуцирует диалектический характер. 
 							Развивая эту тему, заимствование редуцирует 
 							конструктивный механизм сочленений. Лирический 
@@ -219,11 +222,11 @@
 					</div>
 				</li>
 				<li class="h-accordeon__item">
-					<a href="#" class="h-accordeon__trigger h-accordeon__trigger--diet"></a>
+					<a href="#" class="h-accordeon__trigger h-accordeon__trigger--diet">
 						<h3 class="h-accordeon__title">диетическое</h3>
 					</a>
 					<div class="h-accordeon__content">
-						<div class="content__text">
+						<div class="h-accordeon__content-text">
 							Речевой акт редуцирует диалектический характер. 
 							Развивая эту тему, заимствование редуцирует 
 							конструктивный механизм сочленений. Лирический 
@@ -357,152 +360,169 @@
 					</div>
 				</li>
 			</ul>
-    </section>
-    <section class="section order">
-      <div class="container order__container">
-        <h2 class="title title--order">закажите доставку</h2>
-        <div class="form">
-            <form action="get" class="form_elem">
-              	<div class="form__content">
-					<div class="form__col">
-						<div class="form__row">
-							<label class="form__block">
-								<div class="form__title">Имя</div>
-								<input type="text" class="form__input">
-							</label>
-							<label class="form__block">
-								<div class="form__title">Телефон</div>
-								<input type="text" class="form__input">
-							</label>
+    	</section>
+		<section class="section order">
+			<div class="container order__container">
+				<h2 class="title title--order">закажите доставку</h2>
+				<div class="form">
+					<form action="get" class="form_elem">
+						<div class="form__content">
+							<div class="form__col">
+								<div class="form__row">
+									<label class="form__block">
+										<div class="form__title">Имя</div>
+										<input type="text" class="form__input">
+									</label>
+									<label class="form__block">
+										<div class="form__title">Телефон</div>
+										<input type="text" class="form__input">
+									</label>
+								</div>
+								<div class="form__row">
+									<label class="form__block">
+										<div class="form__title">Улица</div>
+										<input type="text" class="form__input">
+									</label>
+								</div>
+								<div class="form__row">
+									<label class="form__block">
+										<div class="form__title">Дом</div>
+										<input type="text" class="form__input">
+									</label>
+									<label class="form__block">
+										<div class="form__title">Корпус</div>
+										<input type="text" class="form__input">
+									</label>
+										<label class="form__block">
+										<div class="form__title">Квартира</div>
+										<input type="text" class="form__input">
+									</label>
+									<label class="form__block">
+										<div class="form__title">Этаж</div>
+										<input type="text" class="form__input">
+									</label>
+								</div>
+							</div>
+							<div class="form__col">
+								<div class="form__row">
+									<label class="form__block">
+										<div class="form__title">Комментарий</div>
+										<textarea class="form__input form__input--textarea"></textarea>
+									</label>
+								</div>
+								<div class="form__row">
+									<label class="form__radio-lbl">
+										<input type="radio" checked name="pay-type" class="form__radio">
+										<div class="form__custom-radio"></div>
+										<div class="form__title">Потребуется сдача</div>
+									</label>
+									<label class="form__radio-lbl">
+										<input type="radio" name="pay-type" class="form__radio">
+										<div class="form__custom-radio"></div>
+										<div class="form__title">Оплата по карте</div>
+									</label>
+								</div>
+								<div class="form__row">
+									<label class="form__radio-lbl">
+										<input type="checkbox" class="form__check">
+										<div class="form__custom-check"></div>
+										<div class="form__title">Не перезванивать</div>
+									</label>
+								</div>
+								<div class="form__row">
+									<button type="submit" class="button order-btn">Заказать</button>
+									<button type="reset" class="button reset-btn">Очистить</button>
+								</div>
+							</div>
 						</div>
-						<div class="form__row">
-							<label class="form__block">
-								<div class="form__title">Улица</div>
-								<input type="text" class="form__input">
-							</label>
-						</div>
-						<div class="form__row">
-							<label class="form__block">
-								<div class="form__title">Дом</div>
-								<input type="text" class="form__input">
-							</label>
-							<label class="form__block">
-								<div class="form__title">Корпус</div>
-								<input type="text" class="form__input">
-							</label>
-								<label class="form__block">
-								<div class="form__title">Квартира</div>
-								<input type="text" class="form__input">
-							</label>
-							<label class="form__block">
-								<div class="form__title">Этаж</div>
-								<input type="text" class="form__input">
-							</label>
-						</div>
-					</div>
-					<div class="form__col">
-						<div class="form__row">
-							<label class="form__block">
-								<div class="form__title">Комментарий</div>
-								<textarea class="form__input form__input--textarea"></textarea>
-							</label>
-						</div>
-						<div class="form__row">
-							<label class="form__radio-lbl">
-								<input type="radio" checked name="pay-type" class="form__radio">
-								<div class="form__custom-radio"></div>
-								<div class="form__title">Потребуется сдача</div>
-							</label>
-							<label class="form__radio-lbl">
-								<input type="radio" name="pay-type" class="form__radio">
-								<div class="form__custom-radio"></div>
-								<div class="form__title">Оплата по карте</div>
-							</label>
-						</div>
-						<div class="form__row">
-							<label class="form__radio-lbl">
-								<input type="checkbox" class="form__check">
-								<div class="form__custom-check"></div>
-								<div class="form__title">Не перезванивать</div>
-							</label>
-						</div>
-						<div class="form__row">
-							<button type="submit" class="button order-btn">Заказать</button>
-							<button type="reset" class="button reset-btn">Очистить</button>
-						</div>
-					</div>
-				</div>
-			</form>
-        </div>
-      </div>
-    </section>
-    <section class="section map">
-    	<footer class="footer">
-			<div class="container">
-				<div class="footer__content">
-					<div class="footer__col footer__col--left">
-						<div class="contacts">
-							<span class="contacts__address">
-								Санкт-Петербург, ул.Бабушкина, д.12/1, 15
-							</span>
-							<a href="tel:+78123771377" class="contacts__phone">
-								<svg class="contacts__phone-icon" width="13" height="11">
-									<use xlink:href="img/icons/mysprite.svg#phone"></use>
-								</svg>
-								<span class="contacts__phone-text">+7 (812) 377-13-77</span>
-							</a>
-						</div>
-					</div>
-					<div class="footer__col footer__col--right">
-						<div class="socials">
-							<ul class="socials__list">
-								<li class="socials__item">
-									<a href="#" class="socials__link">
-										<svg class="socials__icon" width="20" height="20">
-											<use xlink:href="img/icons/mysprite.svg#vk"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="socials__item">
-									<a href="#" class="socials__link">
-										<svg class="socials__icon" width="20" height="20">
-											<use xlink:href="img/icons/mysprite.svg#fb"></use>
-										</svg>									
-									</a>
-								</li>
-								<li class="socials__item">
-									<a href="#" class="socials__link">
-										<svg class="socials__icon" width="20" height="20">
-											<use xlink:href="img/icons/mysprite.svg#inst"></use>
-										</svg>									
-									</a>
-								</li>
-								<li class="socials__item">
-									<a href="#" class="socials__link">
-										<svg class="socials__icon" width="20" height="20">
-											<use xlink:href="img/icons/mysprite.svg#twitter"></use>
-										</svg>									
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
+					</form>
 				</div>
 			</div>
-    	</footer>
-    </section>
-		<aside class="pagination">
-			<ul class="pagination__list">
-				<li class="pagination__item"></li>
-				<li class="pagination__item"></li>
-				<li class="pagination__item"></li>
-				<li class="pagination__item"></li>
-				<li class="pagination__item"></li>
-				<li class="pagination__item"></li>
-				<li class="pagination__item"></li>
-				<li class="pagination__item"></li>
-			</ul>
-		</aside>
-  </div>
+		</section>
+		<section class="section map">
+			<footer class="footer">
+				<div class="container">
+					<div class="footer__content">
+						<div class="footer__col footer__col--left">
+							<div class="contacts">
+								<span class="contacts__address">
+									Санкт-Петербург, ул.Бабушкина, д.12/1, 15
+								</span>
+								<a href="tel:+78123771377" class="contacts__phone">
+									<svg class="contacts__phone-icon" width="13" height="11">
+										<use xlink:href="img/icons/mysprite.svg#phone"></use>
+									</svg>
+									<span class="contacts__phone-text">+7 (812) 377-13-77</span>
+								</a>
+							</div>
+						</div>
+						<div class="footer__col footer__col--right">
+							<div class="socials">
+								<ul class="socials__list">
+									<li class="socials__item">
+										<a href="#" class="socials__link">
+											<svg class="socials__icon" width="20" height="20">
+												<use xlink:href="img/icons/mysprite.svg#vk"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="socials__item">
+										<a href="#" class="socials__link">
+											<svg class="socials__icon" width="20" height="20">
+												<use xlink:href="img/icons/mysprite.svg#fb"></use>
+											</svg>									
+										</a>
+									</li>
+									<li class="socials__item">
+										<a href="#" class="socials__link">
+											<svg class="socials__icon" width="20" height="20">
+												<use xlink:href="img/icons/mysprite.svg#inst"></use>
+											</svg>									
+										</a>
+									</li>
+									<li class="socials__item">
+										<a href="#" class="socials__link">
+											<svg class="socials__icon" width="20" height="20">
+												<use xlink:href="img/icons/mysprite.svg#twitter"></use>
+											</svg>									
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</footer>
+		</section>
+	</div>
+	<aside class="pagination">
+		<ul class="pagination__list">
+			<li class="pagination__item">
+				<a href="#" class="pagination__link"></a>
+			</li>
+			<li class="pagination__item">
+				<a href="#" class="pagination__link"></a>
+			</li>
+			<li class="pagination__item">
+				<a href="#" class="pagination__link"></a>
+			</li>
+			<li class="pagination__item">
+				<a href="#" class="pagination__link"></a>
+			</li>
+			<li class="pagination__item">
+				<a href="#" class="pagination__link"></a>
+			</li>
+			<li class="pagination__item">
+				<a href="#" class="pagination__link"></a>
+			</li>
+			<li class="pagination__item">
+				<a href="#" class="pagination__link"></a>
+			</li>
+			<li class="pagination__item">
+				<a href="#" class="pagination__link"></a>
+			</li>
+			
+		</ul>
+	</aside>
 </body>
 </html>
