--- a/index.html
+++ b/index.html
@@ -64,44 +64,50 @@
 						<li class="best__item">
 							<div>
 								<!-- <img src="img/best_section/meat.png" alt="Мясо"> -->
-								<svg width="97" height="89">
+								<svg width="97" height="89" fill="#e25028">
 									<use xlink:href="img/icons/mysprite.svg#meat"></use>
 								</svg>									
 							</div>
-							<h3>100% свежее мясо</h3>
-							<p>
-								Драма представляет собой 
-								деструктивный цикл. Анапест представляет собой 
-								анапест. Ямб неравномерен.
-							</p>
+							<div>
+								<h3>100% свежее мясо</h3>
+								<p>
+									Драма представляет собой 
+									деструктивный цикл. Анапест представляет собой 
+									анапест. Ямб неравномерен.
+								</p>
+							</div>
 						</li>
 						<li class="best__item">
 							<div>
 								<!-- <img src="img/best_section/hand.png" alt="Handmade"> -->
-								<svg width="97" height="89">
-									<use xlink:href="img/icons/mysprite.svg#hand"></use>
+								<svg width="97" height="89" fill="#f8b43a">
+									<use xlink:href="img/icons/mysprite.svg#hand" ></use>
 								</svg>
 							</div>
-							<h3>Ручная  сборка</h3>
-							<p>
-								Драма представляет собой 
-								деструктивный цикл. Анапест представляет собой 
-								анапест. Первое полустишие притягивает 
-								сюжетный реформаторский пафос.
-							</p>
+							<div>
+								<h3>Ручная  сборка</h3>
+								<p>
+									Драма представляет собой 
+									деструктивный цикл. Анапест представляет собой 
+									анапест. Первое полустишие притягивает 
+									сюжетный реформаторский пафос.
+								</p>
+							</div>
 						</li>
 						<li class="best__item">
 							<div>
 								<!-- <img src="img/best_section/natural.png" alt="Natural products"> -->
-								<svg width="97" height="89">
+								<svg width="97" height="89" fill="#8ac03e">
 									<use xlink:href="img/icons/mysprite.svg#natural"></use>
 								</svg>
+							</div>
+							<div>
+								<h3>Натуральные ингредиенты</h3>
+								<p>
+									Драма представляет собой деструктивный цикл. 
+									Анапест представляет собой анапест.
+								</p>
 							</div>                            
-							<h3>Натуральные ингредиенты</h3>
-							<p>
-								Драма представляет собой деструктивный цикл. 
-								Анапест представляет собой анапест.
-							</p>
 						</li>
 					</ul>
 				</div>
@@ -258,7 +264,8 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<a class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1440606797942-6cc04c045447.png)">
@@ -272,7 +279,8 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<a class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1445404590072-16ef9c18bd83.png)">
@@ -286,7 +294,8 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<a class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1457706924510-773f3c796de3.png)">
@@ -301,6 +310,7 @@
 							расплавленным.
 						</div>
 						<a class="feedback__btn">подробнее</a>
+						<a class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1458696765561-12142eaead13.png)">
@@ -314,7 +324,8 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<a class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1458890715264-db84f7c6ef13.png)">
@@ -328,7 +339,8 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<a class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1461332682233-b818af4c3a6e.png)">
@@ -342,7 +354,8 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<a class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1468546818829-25bb337b6646.png)">
@@ -356,7 +369,8 @@
 							котлетка такой сочной, а сыр таким 
 							расплавленным.
 						</div>
-						<a class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 			</ul>
